--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=travel-logistic-code
 
-spring.security.user.name=${SS_USER}
-spring.security.user.password=${SS_PASSWORD}
+#Configuraciones de seguridad
+#spring.security.user.name=${SS_USER}
+#spring.security.user.password=${SS_PASSWORD}
+
+#Configuraciones de la BD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/travel_logistic
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
