--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=travel-logistic-code
 
 #Configuraciones de seguridad
-#spring.security.user.name=${SS_USER}
-#spring.security.user.password=${SS_PASSWORD}
+spring.security.user.name=${SS_USER}
+spring.security.user.password=${SS_PASSWORD}
+
+#Configuraciones de OAuth con GitHub
+spring.security.oauth2.client.registration.github.client-id=${GH_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GH_CLIENT_SECRET}
 
 #Configuraciones de la BD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
