Modifying User Entity for Customer Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=travel-logistic-code
 
 #Configuraciones de seguridad
-spring.security.user.name=${SS_USER}
-spring.security.user.password=${SS_PASSWORD}
+spring.security.customer.name=${SS_USER}
+spring.security.customer.password=${SS_PASSWORD}
 
 #Configuraciones de OAuth con GitHub
 spring.security.oauth2.client.registration.github.client-id=${GH_CLIENT_ID}
